# d2bs2

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: d2bs_version.cmake  setup.cmake  version.rc.in
d2bs/: CMakeLists.txt
d2bs/src/: main.cpp  version.h
d2bs/src/api/: All.h  JSBase.h  JSConsole.cpp  JSConsole.h  JSControl.cpp  JSControl.h  JSGlobals.cpp  JSGlobals.h  JSUnit.cpp  JSUnit.h
d2bs/src/core/: Console.cpp  Console.h  Engine.cpp  Engine.h  ExceptionHandler.cpp  ExceptionHandler.h  Log.cpp  Log.h  Profile.h  Settings.cpp  Settings.h
d2bs/src/game/: Constants.h  Control.cpp  Control.h  Game.cpp  Game.h  Handlers.cpp  Handlers.h  Offset.cpp  Offset.h  Patches.h  Ptrs.h  Screen.cpp  Screen.h  Structs.h
d2bs/src/scripting/: ScriptEngine.cpp  ScriptEngine.h
d2bs/src/utils/: CommandLine.cpp  CommandLine.h  Localization.h
jspp/: CMakeLists.txt
jspp/include/jspp/: context.h  init_guard.h  jspp.h  object.h  reference.h  stack.h  traits.h  types.h  value.h
jspp/include/jspp/compatibility/: js_classes.h  js_version.h
